[project]
name = "scholark-1"
version = "0.2.0"
description = "MCP server for academic literature search — Semantic Scholar, OpenAlex, Crossref, and Europe PMC in parallel, with DOI dedup, BibTeX, open access lookup, and retraction alerts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
scholark-1 = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "apis"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
